# AD16

./: CMakeLists.txt  Doxyfile
cmake/: Doxyfile.in
examples/: ADC_scope.py  ad16dummy.map
include/: ad16.h  ad16DummyDevice.h  ad16Exception.h  ad16dummy.h  physDummyDevice.h
src/: ad16.cc  ad16DummyDevice.cc  ad16Python.cc  ad16dummy.cc
tests/: ad16.dmap  ad16_scope_fmc25_r1224.mapp  ad16dummy.map  dummies.dmap
tests/executables_src/: testDummyDevice.cpp  testLibrary.cpp
